test other solution

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,7 +17,8 @@ buildscript {
 rootProject.allprojects {
     repositories {
         google()
-        maven { url 'https://jitpack.io' }
+        mavenCentral()
+        // maven { url 'https://jitpack.io' }
     }
 }
 
